Script written in Jupyter Notebook has been added.

--- a/SpleanDiscographyRating.ipynb
+++ b/SpleanDiscographyRating.ipynb
@@ -60,7 +60,7 @@
    },
    "outputs": [],
    "source": [
-    "df = pd.read_excel(r'C:\\Users\\БФедин\\OneDrive - GENERIX\\Reporting\\SpleanDiscography.xlsx')"
+    "df = pd.read_excel(r'C:\\MyFolder\\SpleanDiscography.xlsx')"
    ]
   },
   {
