--- a/SpleanDiscographyRating.ipynb
+++ b/SpleanDiscographyRating.ipynb
@@ -61,7 +61,7 @@
    },
    "outputs": [],
    "source": [
-    "df = pd.read_excel(r'C:\\Users\\БФедин\\OneDrive - GENERIX\\Reporting\\Splean Discography\\SpleanDiscography.xlsx')"
+    "df = pd.read_excel(r'C:\MyFolder\\Splean Discography\\SpleanDiscography.xlsx')"
    ]
   },
   {
