Updated version of the initial script.
Bug with the incorrect rating calcultation was fixed.

--- a/SpleanDiscographyRating.ipynb
+++ b/SpleanDiscographyRating.ipynb
@@ -61,7 +61,7 @@
    },
    "outputs": [],
    "source": [
-    "df = pd.read_excel(r'C:\MyFolder\\Splean Discography\\SpleanDiscography.xlsx')"
+    "df = pd.read_excel(r'C:\\MyFolder\\Splean Discography\\SpleanDiscography.xlsx')"
    ]
   },
   {
