Updated version of the initial script.
Fixed bugs: incorrect rating calculation.

--- a/SpleanDiscographyRating.ipynb
+++ b/SpleanDiscographyRating.ipynb
@@ -61,7 +61,7 @@
    },
    "outputs": [],
    "source": [
-    "df = pd.read_excel(r'C:\\Users\\БФедин\\OneDrive - GENERIX\\Reporting\\Splean Discography\\SpleanDiscography.xlsx')"
+    "df = pd.read_excel(r'C:\\MyFolder\\SpleanDiscography.xlsx')"
    ]
   },
   {
@@ -316,14 +316,6 @@
     "However, I'm not sad at all! I've got plenty of older songs I truly enjoy. For example, almost each song from album *25-y kadr*, which has the highest rating: 79%."
    ]
   },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  }
- ],
  "metadata": {
   "celltoolbar": "Отсутствует",
   "kernelspec": {
